deploy/deployment.yaml
# Copyright 2024 Robert Cronin
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: robertcronincom
  namespace: robertcronincom
  labels:
    app: robertcronincom
    service: robertcronincom
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: robertcronincom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robertcronincom
  namespace: robertcronincom
  labels:
    app: robertcronincom
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robertcronincom
      version: v1
  template:
    metadata:
      labels:
        app: robertcronincom
        version: v1
    spec:
      serviceAccountName: robertcronincom
      containers:
        - name: robertcronincom
          image: ghcr.io/robert-cronin/robertcronin.com:latest
          # images under latest are always pulled so this is the same thing (under main):
          imagePullPolicy: Always
          ports:
            - containerPort: 80
